# fajar-lang

./: .gitignore  .gitpod.yml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  book.toml  build-playground.sh  docker-compose.yml  index.html  model_mnist.fjml  model_mnist.fjmq  output.ptx  output.spv  test_generic.fj
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  rfc.md
.github/workflows/: ci.yml  docs.yml  embedded.yml  nightly.yml  nova.yml  release.yml
audit/: A2_unwrap_inventory.md  unwrap_inventory.csv
benches/: arm64_bench.rs  concurrency_bench.rs  embedded_bench.rs  hadamard_simd.rs  interpreter_bench.rs  v21_benchmarks.md
benches/baselines/: RESULTS.md  bubble_sort.c  bubble_sort.fj  bubble_sort.rs  fibonacci.c  fibonacci.fj  fibonacci.go  fibonacci.py  fibonacci.rs  mandelbrot.c  mandelbrot.fj  mandelbrot.go  mandelbrot.rs  matrix_multiply.c  matrix_multiply.fj  run_baselines.sh  (+7 more)
certification/: README.md
community/: AMBASSADOR_PROGRAM.md  CONFERENCE_TALK.md  ECOSYSTEM_HEALTH.md  MAINTAINER_GUIDE.md  RELEASE_PROCESS.md  RFC_PROCESS.md  STYLE_GUIDE.md  YEAR_ONE_RETROSPECTIVE.md
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_NOVA_V09.md  ARRAYS_PATTERNS_LOAD_BEARING_B0_FINDINGS.md  BARE_METAL_FIX_PLAN.md  BENCHMARKS.md  BENCHMARKS_V08.md  BENCHMARKS_V6.md  BETA_PROGRAM.md  BLOG_FAJAROS_NOVA.md  BLOG_LAUNCH.md  BLOG_NOVA_NVME.md  BLOG_NOVA_V03.md  BLOG_NOVA_V08_BASTION.md  BLOG_NOVA_V09_ZENITH.md  BLOG_V20_DAWN.md  BLOG_V32.md  CALL_INDEX_B0_FINDINGS.md  CALL_INDEX_PLAN.md  CERTIFICATION_ROADMAP.md  CHANGELOG.md  CODE_QUALITY_PLAN.md  COMMERCIAL_READINESS.md  COMMUNITY.md  COMPARISON.md  COMPASS_5_FREEZE_CANDIDATES_B0_FINDINGS.md  COMPASS_5_FREEZE_REMAINING_B0_FINDINGS.md  COMPASS_5_PATH_E_F_EXTRACTION_FINDINGS.md  COMPASS_5_PATH_E_F_EXTRACTION_PLAN.md  COMPILER_ENHANCEMENT_PLAN.md  COMPILER_GAPS_LESSONS_LEARNED.md  COMPILER_INTERNALS.md  CONTRIBUTING.md  CQ1_4_RSA_B0_FINDINGS.md  CRATES_IO_PUBLISH_PLAN.md  CROSS_COMPILE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPTH_COMPLETION_PLAN.md  (+256 more)
examples/: README_TEMPLATES.md  accelerator_demo.fj  actor_demo.fj  array_methods.fj  async_demo.fj  async_trait_demo.fj  at_interrupt_demo.fj  bare_metal.fj  bare_metal_hello.fj  bare_metal_serial.fj  bench_binary_trees.fj  bench_cold_start.fj  bench_compile_speed.fj  bench_fannkuch.fj  bench_fasta.fj  bench_fib_recursive.fj  bench_json_parse.fj  bench_mandelbrot.fj  bench_matrix_multiply.fj  bench_nbody.fj  bench_pipeline.fj  bench_sort.fj  bench_spectral_norm.fj  bench_string_ops.fj  bsp_blinky.fj  calibrated_rotation.fj  cli_tool_demo.fj  collections.fj  compression_pipeline.fj  comptime_demo.fj  const_alloc_demo.fj  const_generics_demo.fj  const_traits_demo.fj  database_demo.fj  debug_demo.fj  dependent_types.fj  diffusion_demo.fj  distributed_mnist.fj  doc_comments.fj  drone_control.fj  (+179 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_lexer/: hello.fj  operators.fj  structs.fj
fuzz/corpus/fuzz_parser/: control.fj  types.fj
fuzz/fuzz_targets/: fuzz_analyzer.rs  fuzz_async.rs  fuzz_borrow.rs  fuzz_codegen.rs  fuzz_effect.rs  fuzz_fstring.rs  fuzz_interpreter.rs  fuzz_lexer.rs  fuzz_macro.rs  fuzz_parser.rs  fuzz_repl.rs
models/: mnist_trained.onnx.data
paper/: FAJARQUANT_PAPER.md  fajarquant.tex  references.bib
playground/: README.md  examples.json  index.html  package.json  vite.config.js
runtime_bare/: Cargo.toml
scripts/: Dockerfile.cross  analyze_kv_distribution.py  audit_error_codes.py  audit_unsafe.py  check_decision_file.sh  check_doc_coverage.sh  check_publish_ready.sh  check_stdlib_docs.sh  check_version_sync.sh  cross-build-q6a.sh  deploy-q6a.sh  extract_kv_cache.py  fajarquant_v2_native_vs_python.sh  fj-service.service  install-git-hooks.sh  multi-repo-check.sh  q6a-monitor.sh  q6a-train-deploy.sh
shaders/: conv2d.wgsl  matmul.wgsl  relu.wgsl  scale.wgsl  sigmoid.wgsl  softmax.wgsl  transpose.wgsl  vecadd.wgsl
snap/: snapcraft.yaml
src/: const_alloc.rs  const_bench.rs  const_generic_types.rs  const_generics.rs  const_macros.rs  const_pipeline.rs  const_reflect.rs  const_stdlib.rs  const_traits.rs  docgen.rs  generators_v12.rs  hardening.rs  lib.rs  macros.rs  macros_v12.rs  main.rs  wasi_v12.rs
stdlib/: README.md  analyzer.fj  ast.fj  codegen.fj  codegen_driver.fj  compiler.fj  core.fj  drivers.fj  fajarquant.fj  hal.fj  lexer.fj  nn.fj  os.fj  parser.fj  parser_ast.fj  selfhost_main.fj
tests/: analyzer_branch_merge_terminator.rs  analyzer_se024_use_after_move_array.rs  async_tests.rs  autograd_tests.rs  backend_equivalence_tests.rs  benchmark_tests.rs  benchmark_validation.rs  calibrated_rotation_orthogonal.rs  cli_native_llvm_analyzer_regression.rs  codegen_annotation_coverage.rs  community_tests.rs  comptime_tests.rs  context_safety_tests.rs  cross_compile_tests.rs  debugger_tests.rs  demo_tests.rs  distributed_integration.rs  doc_tests.rs  dtype_tests.rs  dual_backend_tests.rs  editor_packages.rs  effect_poly_tests.rs  effect_tests.rs  embedded_tests.rs  error_code_coverage.rs  error_display_golden.rs  eval_tests.rs  fajaros_regression_tests.rs  fajarquant_e2e_tests.rs  fajarquant_fj_stdlib_bit_equivalent.rs  fajarquant_safety_tests.rs  fajarquant_v2_device.rs  feature_flag_tests.rs  fuzz_harness.rs  fuzz_target_canary.rs  generic_tests.rs  incremental_tests.rs  initramfs_tests.rs  integration_v14.rs  launch_tests.rs  (+43 more)
tools/: fuzz_smoke.sh  test_end_to_end.sh  test_qemu_arm64.sh  test_qemu_boot.sh
tutorials/: 01_hello_world.fj  02_control_flow.fj  03_data_structures.fj  04_functions_closures.fj  05_error_handling.fj  06_traits.fj  07_async.fj  08_os_kernel.fj  09_ml_tensors.fj  10_project.fj  README.md
website/: comparison.html  download.html  feed.xml  index.html  robots.txt  sitemap.xml  status.html
workshop/: README.md
(+832 files in other folders)
