[package]
name = "fajar-lang"
version = "33.7.2"
edition = "2024"
rust-version = "1.87"
description = "Fajar Lang — Systems programming language for embedded ML + OS integration. FajarQuant, JIT compilation, GPU dispatch, algebraic effects, 10,400+ tests."
license = "Apache-2.0"
repository = "https://github.com/fajarkraton/fajar-lang"
readme = "README.md"
keywords = ["compiler", "language", "embedded", "ml", "os"]
categories = ["compilers", "development-tools", "embedded", "no-std", "science"]

[[bin]]
name = "fj"
path = "src/main.rs"

[dependencies]
# FajarQuant — extracted to standalone crate (V26 Phase A4 split, 2026-04-11).
# Path dep during local dev; switch to git/version dep before publishing fajar-lang to crates.io.
# fajarquant: git dep with pinned rev so CI runners (which only checkout
# fajar-lang) can resolve it. For local dev iteration with un-pushed
# fajarquant changes, temporarily switch to: { path = "../fajarquant" }
# (do NOT commit the path form — it breaks CI).
fajarquant = { git = "https://github.com/fajarkraton/fajarquant", rev = "b05ecf1705ba79145049373510ad63f42ab5efbe" }

thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
ndarray = "0.16"              # Phase 4: tensor backend
ndarray-rand = "0.15"         # Phase 4: random tensor creation
rand = "0.8"                  # Phase 4: RNG for randn/xavier
tower-lsp = "0.20"            # Phase 5.3: LSP server
tokio = { version = "1", features = ["full"] }  # Phase 5.3: async runtime for LSP
serde = { version = "1.0", features = ["derive"] }  # Phase 5.4: toml deserialization
serde_json = "1.0"            # Hardware profile JSON serialization
toml = "0.8"                  # Phase 5.4: parse fj.toml
libloading = "0.8"            # Phase 7: FFI dynamic library loading
dap = "0.4.1-alpha1"          # Phase 2: Debug Adapter Protocol server
rusqlite = { version = "0.34", features = ["bundled"] }  # TQ12.2: SQLite database

# V8 GC1: Real crypto (RustCrypto)
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
aes = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"

# V8 NQ2.1: TLS/HTTPS support
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

# V8 GC4: Real SMT solver
z3 = { version = "0.12", optional = true }

# V8 GC2: Real FFI (C++ via libclang, Python via pyo3)
clang-sys = { version = "1.8", optional = true, features = ["clang_18_0", "runtime"] }
pyo3 = { version = "0.24", optional = true, features = ["auto-initialize"] }

# GUI windowing (feature-gated)
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }

# Playground WASM (feature-gated, wasm32 target only)
wasm-bindgen = { version = "0.2", optional = true }

# GPU compute (feature-gated)
wgpu = { version = "28.0", optional = true }
ash = { version = "0.38", optional = true, default-features = false, features = ["loaded", "std"] }

# Cranelift native codegen (feature-gated)
cranelift-codegen = { version = "0.129.1", optional = true, features = ["x86", "arm64", "riscv64"] }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-jit = { version = "0.129.1", optional = true }
cranelift-object = { version = "0.129.1", optional = true }
cranelift-native = { version = "0.129.1", optional = true }
target-lexicon = { version = "0.13.5", optional = true }
inkwell = { version = "0.8.0", features = ["llvm18-1"], optional = true }

# Real WebSocket client (feature-gated)
tungstenite = { version = "0.26", optional = true, features = ["native-tls"] }
# Real MQTT client (feature-gated)
rumqttc = { version = "0.25", optional = true }
# Real BLE client (feature-gated, requires OS Bluetooth stack)
btleplug = { version = "0.11", optional = true }
# Native TLS for HTTPS server (feature-gated)
native-tls = { version = "0.2", optional = true }
# Regex engine for pattern matching builtins
regex = "1.11"
# Required for wasm32 target (getrandom 0.2 needs js feature for wasm32-unknown-unknown)
getrandom = { version = "0.2", optional = true }

[features]
default = []
gpu = ["wgpu"]
vulkan = ["dep:ash"]
cuda = []
native = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-module",
    "cranelift-jit",
    "cranelift-object",
    "cranelift-native",
    "target-lexicon",
]
llvm = ["dep:inkwell"]
tls = ["dep:rustls", "dep:webpki-roots"]
cpp-ffi = ["dep:clang-sys"]
python-ffi = ["dep:pyo3"]
smt = ["dep:z3"]
gui = ["dep:winit", "dep:softbuffer"]
websocket = ["dep:tungstenite"]
mqtt = ["dep:rumqttc"]
ble = ["dep:btleplug"]
https = ["dep:native-tls"]
playground-wasm = ["dep:wasm-bindgen", "getrandom/js"]
wasm = []
freertos = []
zephyr = []
esp32 = []

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interpreter_bench"
harness = false

[[bench]]
name = "embedded_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false
required-features = ["native"]

[[bench]]
name = "arm64_bench"
harness = false

[[bench]]
name = "hadamard_simd"
harness = false

[patch.crates-io]
cranelift-object = { path = "patches/cranelift-object" }

[profile.release]
opt-level = 3
lto = false
