[package]
name = "fajar-lang-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fajar-lang]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_analyzer"
path = "fuzz_targets/fuzz_analyzer.rs"
doc = false

[[bin]]
name = "fuzz_interpreter"
path = "fuzz_targets/fuzz_interpreter.rs"
doc = false

[[bin]]
name = "fuzz_effect"
path = "fuzz_targets/fuzz_effect.rs"
doc = false

[[bin]]
name = "fuzz_fstring"
path = "fuzz_targets/fuzz_fstring.rs"
doc = false

[[bin]]
name = "fuzz_repl"
path = "fuzz_targets/fuzz_repl.rs"
doc = false

[[bin]]
name = "fuzz_macro"
path = "fuzz_targets/fuzz_macro.rs"
doc = false

[[bin]]
name = "fuzz_codegen"
path = "fuzz_targets/fuzz_codegen.rs"
doc = false

[[bin]]
name = "fuzz_borrow"
path = "fuzz_targets/fuzz_borrow.rs"
doc = false

[[bin]]
name = "fuzz_async"
path = "fuzz_targets/fuzz_async.rs"
doc = false
